--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,10 @@ project(ft_irc)
 
 set(CMAKE_CXX_STANDARD 98)
 
+FILE(GLOB SOURCES
+        ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp
+        )
+
 add_executable(ft_irc
-        sandbox.cpp)
+        ${SOURCES})
